<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.galaxy_light.gzh.graffitidemo.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.galaxy_light.gzh.graffitidemo.custom.GraffitiView
            android:id="@+id/graffitiView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_revoke"
                style="?attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/revoke" />

            <Button
                android:id="@+id/bt_unRevoke"
                style="?attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unRevoke" />

            <Button
                android:id="@+id/bt_reset"
                style="?attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_1"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_0" />

        <ImageView
            android:id="@+id/iv_2"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_40" />

        <ImageView
            android:id="@+id/iv_3"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_80" />

        <ImageView
            android:id="@+id/iv_4"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_120" />

        <ImageView
            android:id="@+id/iv_5"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_160" />

        <ImageView
            android:id="@+id/iv_6"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_200" />

        <ImageView
            android:id="@+id/iv_7"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_240" />

        <ImageView
            android:id="@+id/iv_8"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_280" />

        <ImageView
            android:id="@+id/iv_9"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_320" />

        <ImageView
            android:id="@+id/iv_10"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_fff" />

        <ImageView
            android:id="@+id/iv_11"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:background="@color/color_000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_block"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/block" />

        <Button
            android:id="@+id/bt_curve"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/curve" />

        <Button
            android:id="@+id/bt_line"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/line" />

        <Button
            android:id="@+id/bt_pane"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pane" />

        <Button
            android:id="@+id/bt_point"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/point" />

        <Button
            android:id="@+id/bt_ring"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ring" />

        <Button
            android:id="@+id/bt_round"
            style="?attr/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/round" />
    </LinearLayout>

</LinearLayout>
